# ResumeRadar

./: .dockerignore  .gitignore  docker-compose.yml  nginx-dev.conf  resumeradar-architecture.md
scripts/: init-schemas.sql  (+2 more)
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/app/: main.py
services/auth-service/app/core/: config.py
services/auth-service/app/models/: user.py
services/auth-service/app/repositories/: user_repo.py
services/auth-service/app/schemas/: auth.py
services/auth-service/app/services/: auth_service.py
services/auth-service/tests/: conftest.py  test_auth.py
services/matcher-service/: Dockerfile  pyproject.toml
services/matcher-service/app/: main.py
services/matcher-service/app/core/: config.py
services/matcher-service/app/models/: match_result.py
services/matcher-service/app/repositories/: match_repo.py
services/matcher-service/app/schemas/: match.py
services/matcher-service/app/services/: jd_parser.py  keyword_matcher.py  matcher_service.py  semantic_matcher.py  taxonomy_matcher.py
services/matcher-service/tests/: conftest.py  test_keyword_matcher.py  test_match_endpoint.py  test_semantic_matcher.py  test_taxonomy_matcher.py
services/profile-service/: Dockerfile  pyproject.toml
services/profile-service/app/: main.py
services/profile-service/app/core/: config.py
services/profile-service/app/data/: skill_dictionary.json
services/profile-service/app/models/: profile.py  resume.py
services/profile-service/tests/: conftest.py  test_profile.py  test_resume.py  test_skill_extraction.py
(+44 files in other folders)
