[project]
name = "resumeradar-profile-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "resumeradar-common",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "rapidfuzz>=3.6.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"